feat: M12 and above (#1)
* update gitignore

* feat(M12): Implement UPDATE and DELETE statements - Complete CRUD operations

* CI/CD integration for github

* spotless apply

* feat: Implement M12 - UPDATE and DELETE SQL statements

* feat: Implement M12 - UPDATE and DELETE SQL statements

* code formatting

* update gitignore

* ci: switch all workflows to Java 25, fix unnamed catch variable syntax

- Update matrix in ci.yml from [17, 21] to [25]
- Update all hardcoded java-version: 17 references to 25 across
  ci.yml, pr-checks.yml, codeql.yml, and release.yml
- Replace `catch (XxxException _)` with `catch (XxxException ignored)`
  in all affected Java files; the unnamed variable `_` (JEP 456) is
  only valid from Java 22+ and was rejected by the Java 17 toolchain
  previously used in CI

Co-authored-by: Cursor <cursoragent@cursor.com>

* chore: update dependencies and improve code formatting

- Upgrade Google Java Format from 1.25.2 to 1.35.0 in build.gradle.kts
- Refactor code formatting in Database.java and NioDiskManager.java for improved readability
- Update gradle-wrapper.properties to use Gradle 9.5.1

* ci: remove test report generation step from CI workflow

- Deleted the step for generating test reports in ci.yml to streamline the CI process.
- Cleaned up unused code in QueryGatherers.java by removing the State record definition.
- Removed unnecessary variable initialization in JoinReorderingRule.java to enhance code clarity.

* ci: update permissions in CI workflow for enhanced functionality

- Added permissions for checks, contents, and pull-requests in ci.yml to improve workflow capabilities.

---------

Co-authored-by: Anupam Kumar <anupam.kumar@navi.com>